Bug 1405311: Remove uses of :-moz-system-metric. r=xidorn,dao
MozReview-Commit-ID: 1Yqy6KgMUB1

UltraBlame original commit: f758ec7889141e1c8eae484c1907623fa8be343e

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -3252,6 +3252,46 @@ menubartext
 nav
 -
 bar
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+customizableui
+/
+toolbar
+.
+xml
+#
+toolbar
+-
+drag
+"
+)
+;
+}
+media
+(
+-
+moz
+-
+menubar
+-
+drag
+)
+{
 #
 toolbar
 -
@@ -3276,18 +3316,6 @@ moz
 -
 lwtheme
 )
-:
--
-moz
--
-system
--
-metric
-(
-menubar
--
-drag
-)
 #
 TabsToolbar
 :
@@ -3298,18 +3326,6 @@ not
 moz
 -
 lwtheme
-)
-:
--
-moz
--
-system
--
-metric
-(
-menubar
--
-drag
 )
 {
 -
@@ -3340,6 +3356,7 @@ drag
 "
 )
 ;
+}
 }
 .
 tabbrowser
