--- a/browser/themes/linux/places/organizer.css
+++ b/browser/themes/linux/places/organizer.css
@@ -9,20 +9,18 @@ appearance
 menubar
 ;
 }
-#
-placesToolbar
-:
+media
+(
 -
 moz
 -
-system
--
-metric
-(
 menubar
 -
 drag
 )
+{
+#
+placesToolbar
 {
 -
 moz
@@ -52,6 +50,7 @@ drag
 "
 )
 ;
+}
 }
 #
 placesToolbar
