--- a/editor/reftests/xul/input.css
+++ b/editor/reftests/xul/input.css
@@ -99,25 +99,23 @@ start
 5px
 ;
 }
-#
-win
-html
-|
-input
-:
+media
+(
 -
 moz
 -
-system
--
-metric
-(
 windows
 -
 default
 -
 theme
 )
+{
+#
+win
+html
+|
+input
 {
 padding
 :
@@ -133,6 +131,7 @@ start
 :
 4px
 ;
+}
 }
 #
 linux
@@ -250,6 +249,18 @@ color
 graytext
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
 :
 root
 :
@@ -263,20 +274,6 @@ html
 input
 .
 empty
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-default
--
-theme
-)
 {
 font
 -
@@ -284,6 +281,7 @@ style
 :
 italic
 ;
+}
 }
 html
 |
