--- a/toolkit/themes/linux/global/global.css
+++ b/toolkit/themes/linux/global/global.css
@@ -146,6 +146,16 @@ undetermined
 )
 ;
 }
+media
+(
+-
+moz
+-
+menubar
+-
+drag
+)
+{
 toolbar
 [
 type
@@ -173,18 +183,6 @@ not
 moz
 -
 lwtheme
-)
-:
--
-moz
--
-system
--
-metric
-(
-menubar
--
-drag
 )
 {
 -
@@ -215,6 +213,7 @@ drag
 "
 )
 ;
+}
 }
 :
 root
