--- a/toolkit/themes/windows/global/checkbox.css
+++ b/toolkit/themes/windows/global/checkbox.css
@@ -140,6 +140,16 @@ color
 GrayText
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+classic
+)
+{
 checkbox
 [
 disabled
@@ -148,18 +158,6 @@ disabled
 true
 "
 ]
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
 {
 color
 :
@@ -173,6 +171,7 @@ shadow
 1px
 ThreeDHighlight
 ;
+}
 }
 .
 checkbox
