--- a/toolkit/themes/windows/global/listbox.css
+++ b/toolkit/themes/windows/global/listbox.css
@@ -541,21 +541,59 @@ sortdirection
 sortDirection
 =
 "
-ascending
+descending
 "
 ]
+{
+list
+-
+style
+-
+image
 :
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+tree
+/
+sort
+-
+dsc
+.
+png
+"
+)
+;
+}
+media
+(
 -
 moz
 -
-system
--
-metric
-(
 windows
 -
 classic
 )
+{
+.
+listheader
+-
+sortdirection
+[
+sortDirection
+=
+"
+ascending
+"
+]
 {
 list
 -
@@ -621,65 +659,14 @@ tree
 sort
 -
 dsc
+-
+classic
 .
 png
 "
 )
 ;
 }
-.
-listheader
--
-sortdirection
-[
-sortDirection
-=
-"
-descending
-"
-]
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-tree
-/
-sort
--
-dsc
--
-classic
-.
-png
-"
-)
-;
 }
 .
 listcell
