--- a/toolkit/themes/windows/global/menu.css
+++ b/toolkit/themes/windows/global/menu.css
@@ -1121,6 +1121,16 @@ color
 GrayText
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+classic
+)
+{
 menulist
 >
 menupopup
@@ -1146,18 +1156,6 @@ true
 "
 ]
 )
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
 {
 color
 :
@@ -1169,6 +1167,7 @@ shadow
 :
 none
 ;
+}
 }
 menulist
 >
