--- a/toolkit/themes/windows/global/radio.css
+++ b/toolkit/themes/windows/global/radio.css
@@ -219,6 +219,16 @@ color
 GrayText
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+classic
+)
+{
 radio
 [
 disabled
@@ -227,18 +237,6 @@ disabled
 true
 "
 ]
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
 {
 color
 :
@@ -252,6 +250,7 @@ shadow
 1px
 ThreeDHighlight
 ;
+}
 }
 .
 radio
