--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -603,6 +603,20 @@ focus
 normal
 ;
 }
+media
+(
+-
+moz
+-
+scrollbar
+-
+start
+-
+backward
+:
+0
+)
+{
 scrollbarbutton
 [
 sbattr
@@ -615,120 +629,124 @@ up
 top
 "
 ]
-:
-not
-(
-:
--
-moz
--
-system
--
-metric
-(
-scrollbar
--
-start
--
-backward
-)
-)
-scrollbarbutton
-[
-sbattr
-=
-"
-scrollbar
--
-down
--
-top
-"
-]
-:
-not
-(
-:
--
-moz
--
-system
--
-metric
-(
-scrollbar
--
-start
--
-forward
-)
-)
-scrollbarbutton
-[
-sbattr
-=
-"
-scrollbar
--
-up
--
-bottom
-"
-]
-:
-not
-(
-:
--
-moz
--
-system
--
-metric
-(
-scrollbar
--
-end
--
-backward
-)
-)
-scrollbarbutton
-[
-sbattr
-=
-"
-scrollbar
--
-down
--
-bottom
-"
-]
-:
-not
-(
-:
--
-moz
--
-system
--
-metric
-(
-scrollbar
--
-end
--
-forward
-)
-)
 {
 display
 :
 none
 ;
 }
+}
+media
+(
+-
+moz
+-
+scrollbar
+-
+start
+-
+forward
+:
+0
+)
+{
+scrollbarbutton
+[
+sbattr
+=
+"
+scrollbar
+-
+down
+-
+top
+"
+]
+{
+display
+:
+none
+;
+}
+}
+media
+(
+-
+moz
+-
+scrollbar
+-
+end
+-
+backward
+:
+0
+)
+{
+scrollbarbutton
+[
+sbattr
+=
+"
+scrollbar
+-
+up
+-
+bottom
+"
+]
+{
+display
+:
+none
+;
+}
+}
+media
+(
+-
+moz
+-
+scrollbar
+-
+end
+-
+forward
+:
+0
+)
+{
+scrollbarbutton
+[
+sbattr
+=
+"
+scrollbar
+-
+down
+-
+bottom
+"
+]
+{
+display
+:
+none
+;
+}
+}
+media
+(
+-
+moz
+-
+scrollbar
+-
+thumb
+-
+proportional
+)
+{
 thumb
 [
 sbattr
@@ -739,20 +757,6 @@ scrollbar
 thumb
 "
 ]
-:
--
-moz
--
-system
--
-metric
-(
-scrollbar
--
-thumb
--
-proportional
-)
 {
 -
 moz
@@ -763,4 +767,5 @@ flex
 :
 1
 ;
+}
 }
