--- a/toolkit/themes/windows/global/global.css
+++ b/toolkit/themes/windows/global/global.css
@@ -1109,6 +1109,16 @@ color
 GrayText
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+classic
+)
+{
 label
 [
 disabled
@@ -1117,18 +1127,6 @@ disabled
 true
 "
 ]
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
 {
 color
 :
@@ -1142,6 +1140,7 @@ shadow
 1px
 ThreeDHighlight
 ;
+}
 }
 .
 tooltip
