--- a/toolkit/themes/windows/global/tree.css
+++ b/toolkit/themes/windows/global/tree.css
@@ -1842,21 +1842,72 @@ sortdirection
 sortDirection
 =
 "
-ascending
+descending
 "
 ]
+{
+list
+-
+style
+-
+image
 :
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+tree
+/
+sort
+-
+dsc
+.
+png
+"
+)
+;
+}
+media
+(
 -
 moz
 -
-system
--
-metric
-(
 windows
 -
 classic
 )
+{
+treecol
+:
+not
+(
+[
+hideheader
+=
+"
+true
+"
+]
+)
+>
+.
+treecol
+-
+sortdirection
+[
+sortDirection
+=
+"
+ascending
+"
+]
 {
 list
 -
@@ -1935,78 +1986,14 @@ tree
 sort
 -
 dsc
+-
+classic
 .
 png
 "
 )
 ;
 }
-treecol
-:
-not
-(
-[
-hideheader
-=
-"
-true
-"
-]
-)
->
-.
-treecol
--
-sortdirection
-[
-sortDirection
-=
-"
-descending
-"
-]
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-tree
-/
-sort
--
-dsc
--
-classic
-.
-png
-"
-)
-;
 }
 .
 tree
