--- a/toolkit/components/extensions/test/mochitest/test_ext_webrequest_hsts.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_webrequest_hsts.html
@@ -554,6 +554,20 @@ onCompleted
 "
 )
 ;
+browser
+.
+test
+.
+sendMessage
+(
+"
+onCompleted
+"
+details
+.
+url
+)
+;
 }
 {
 urls
@@ -835,6 +849,30 @@ ok
 "
 )
 ;
+ok
+(
+(
+await
+extension
+.
+awaitMessage
+(
+"
+onCompleted
+"
+)
+)
+.
+startsWith
+(
+sample
+)
+"
+redirection
+ok
+"
+)
+;
 /
 /
 priming
@@ -917,6 +955,44 @@ sjs
 "
 hsts
 primed
+"
+)
+;
+is
+(
+await
+extension
+.
+awaitMessage
+(
+"
+onCompleted
+"
+)
+"
+https
+:
+/
+/
+example
+.
+org
+/
+tests
+/
+toolkit
+/
+components
+/
+extensions
+/
+test
+/
+mochitest
+/
+hsts
+.
+sjs
 "
 )
 ;
@@ -1008,6 +1084,44 @@ sjs
 "
 hsts
 upgraded
+"
+)
+;
+is
+(
+await
+extension
+.
+awaitMessage
+(
+"
+onCompleted
+"
+)
+"
+https
+:
+/
+/
+example
+.
+org
+/
+tests
+/
+toolkit
+/
+components
+/
+extensions
+/
+test
+/
+mochitest
+/
+hsts
+.
+sjs
 "
 )
 ;
