Backed out changeset d26fbc62c177 (bug 1407840) for failing devtools' browser/base/content/test/static/browser_all_files_referenced.js. r=backout
UltraBlame original commit: 4a84dcc0d240ef0537e6f0dcfd562fb49991c11d

--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -197,9 +197,7 @@ input
 [
 type
 =
-"
 search
-"
 ]
 {
 flex
@@ -835,12 +833,6 @@ spacing
 )
 auto
 ;
-max
--
-width
-:
-350px
-;
 line
 -
 height
@@ -848,6 +840,30 @@ height
 1
 .
 4em
+;
+}
+.
+landing
+-
+page
+.
+panel
+.
+under
+-
+construction
+.
+under
+-
+construction
+-
+message
+{
+max
+-
+width
+:
+350px
 ;
 }
 .
@@ -1787,49 +1803,54 @@ wrapper
 launchpad
 -
 container
-.
-rocket
+svg
 {
 width
 :
-18px
+24px
 ;
 height
 :
-18px
+24px
 ;
-background
-:
-url
-(
-"
-/
-pad
--
-assets
-/
-rocket
+}
 .
+landing
+-
+page
+.
+sidebar
+.
+title
+-
+wrapper
+.
+launchpad
+-
+container
 svg
-"
+path
+{
+width
+:
+24px
+;
+height
+:
+24px
+;
+fill
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
 )
-no
--
-repeat
-top
-left
-;
-background
--
-size
-:
-contain
-;
-display
-:
-inline
--
-block
 ;
 }
 .
@@ -1862,12 +1883,6 @@ padding
 left
 :
 3px
-;
-font
--
-weight
-:
-normal
 ;
 }
 menu
@@ -2847,27 +2862,6 @@ border
 solid
 transparent
 ;
-}
-media
-(
-max
--
-width
-:
-640px
-)
-{
-.
-shortcuts
--
-section
-{
-width
-:
-100
-%
-;
-}
 }
 :
 root
@@ -4908,54 +4902,11 @@ end
 5px
 ;
 }
-img
 .
 arrow
-{
-mask
-:
-url
-(
-"
-chrome
-:
-/
-/
-devtools
-/
-skin
-/
-images
-/
-debugger
-/
-arrow
-.
 svg
-"
-)
-;
-margin
--
-top
-:
-3px
-;
-width
-:
-9px
-;
-height
-:
-9px
-;
-padding
--
-top
-:
-9px
-;
-background
+{
+fill
 :
 var
 (
@@ -4968,40 +4919,23 @@ splitter
 color
 )
 ;
-mask
--
-size
-:
-100
-%
-;
-display
-:
-inline
--
-block
-;
 margin
 -
-bottom
+top
 :
-1px
-;
-transform
-:
-rotate
-(
--
-90deg
-)
+3px
 ;
 transition
 :
 transform
 0
 .
-18s
+25s
 ease
+;
+width
+:
+10px
 ;
 }
 html
@@ -7610,54 +7544,15 @@ sources
 list
 .
 tree
-img
 .
 arrow
+svg
 {
 margin
 -
-right
+top
 :
-5px
-;
-}
-.
-sources
--
-list
-.
-tree
-.
-focused
-img
-.
-arrow
-{
-background
--
-color
-:
-white
-;
-}
-.
-sources
--
-list
-.
-tree
-img
-.
-arrow
-.
-expanded
-{
-transform
-:
-rotate
-(
-0deg
-)
+0px
 ;
 }
 .
@@ -7678,11 +7573,9 @@ not
 .
 focused
 )
-img
-.
-arrow
+svg
 {
-background
+fill
 :
 var
 (
@@ -7810,40 +7703,46 @@ sources
 -
 message
 {
-width
-:
-100
-%
-;
-font
--
-style
-:
-italic
-;
-text
--
-align
-:
-center
-;
-padding
-:
-0
-.
-5em
-;
 font
 -
 size
 :
 12px
 ;
-user
--
-select
+color
 :
-none
+var
+(
+-
+-
+theme
+-
+comment
+-
+alt
+)
+;
+font
+-
+weight
+:
+lighter
+;
+padding
+-
+top
+:
+5px
+;
+flex
+-
+grow
+:
+1
+;
+display
+:
+flex
 ;
 justify
 -
