Bug 1407351 - Back out to avoid a merge conflict with bug 1406212. I'll reland tomorrow
MozReview-Commit-ID: 612TlR0MgR4

UltraBlame original commit: 6a58f8ab311d961a12584fd91b05b8c5c6aa2bf0

--- a/devtools/client/themes/performance.css
+++ b/devtools/client/themes/performance.css
@@ -1411,6 +1411,12 @@ realtime
 -
 disabled
 -
+message
+.
+realtime
+-
+disabled
+-
 on
 -
 e10s
@@ -1441,6 +1447,23 @@ disabled
 on
 -
 e10s
+-
+message
+#
+performance
+-
+view
+[
+e10s
+=
+"
+unsupported
+"
+]
+.
+realtime
+-
+disabled
 -
 message
 {
