--- a/browser/themes/linux/places/places.css
+++ b/browser/themes/linux/places/places.css
@@ -201,6 +201,44 @@ height
 24px
 ;
 }
+:
+root
+[
+uidensity
+=
+touch
+]
+#
+search
+-
+box
+:
+root
+[
+uidensity
+=
+touch
+]
+.
+sidebar
+-
+placesTreechildren
+:
+:
+-
+moz
+-
+tree
+-
+row
+{
+min
+-
+height
+:
+32px
+;
+}
 .
 sidebar
 -
