Bug 1407840 - Update Debugger frontend (10-12). r=jdescottes
MozReview-Commit-ID: J6xJ6RGbnkZ

UltraBlame original commit: 7e76eb11f03423e98ad3f4676d25de0e4dd508d3

--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -197,7 +197,9 @@ input
 [
 type
 =
+"
 search
+"
 ]
 {
 flex
@@ -833,6 +835,12 @@ spacing
 )
 auto
 ;
+max
+-
+width
+:
+350px
+;
 line
 -
 height
@@ -840,30 +848,6 @@ height
 1
 .
 4em
-;
-}
-.
-landing
--
-page
-.
-panel
-.
-under
--
-construction
-.
-under
--
-construction
--
-message
-{
-max
--
-width
-:
-350px
 ;
 }
 .
@@ -1803,54 +1787,17 @@ wrapper
 launchpad
 -
 container
+.
+rocket
 svg
 {
 width
 :
-24px
+18px
 ;
 height
 :
-24px
-;
-}
-.
-landing
--
-page
-.
-sidebar
-.
-title
--
-wrapper
-.
-launchpad
--
-container
-svg
-path
-{
-width
-:
-24px
-;
-height
-:
-24px
-;
-fill
-:
-var
-(
--
--
-theme
--
-body
--
-color
-)
+18px
 ;
 }
 .
@@ -1883,6 +1830,12 @@ padding
 left
 :
 3px
+;
+font
+-
+weight
+:
+normal
 ;
 }
 menu
@@ -2862,6 +2815,27 @@ border
 solid
 transparent
 ;
+}
+media
+(
+max
+-
+width
+:
+640px
+)
+{
+.
+shortcuts
+-
+section
+{
+width
+:
+100
+%
+;
+}
 }
 :
 root
@@ -4902,11 +4876,54 @@ end
 5px
 ;
 }
+img
 .
 arrow
-svg
 {
-fill
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+arrow
+.
+svg
+"
+)
+;
+margin
+-
+top
+:
+3px
+;
+width
+:
+9px
+;
+height
+:
+9px
+;
+padding
+-
+top
+:
+9px
+;
+background
 :
 var
 (
@@ -4919,23 +4936,40 @@ splitter
 color
 )
 ;
+mask
+-
+size
+:
+100
+%
+;
+display
+:
+inline
+-
+block
+;
 margin
 -
-top
+bottom
 :
-3px
+1px
+;
+transform
+:
+rotate
+(
+-
+90deg
+)
 ;
 transition
 :
 transform
 0
 .
-25s
+18s
 ease
-;
-width
-:
-10px
 ;
 }
 html
@@ -7544,15 +7578,54 @@ sources
 list
 .
 tree
+img
 .
 arrow
-svg
 {
 margin
 -
-top
+right
 :
-0px
+5px
+;
+}
+.
+sources
+-
+list
+.
+tree
+.
+focused
+img
+.
+arrow
+{
+background
+-
+color
+:
+white
+;
+}
+.
+sources
+-
+list
+.
+tree
+img
+.
+arrow
+.
+expanded
+{
+transform
+:
+rotate
+(
+0deg
+)
 ;
 }
 .
@@ -7573,9 +7646,11 @@ not
 .
 focused
 )
-svg
+img
+.
+arrow
 {
-fill
+background
 :
 var
 (
@@ -7703,46 +7778,40 @@ sources
 -
 message
 {
+width
+:
+100
+%
+;
+font
+-
+style
+:
+italic
+;
+text
+-
+align
+:
+center
+;
+padding
+:
+0
+.
+5em
+;
 font
 -
 size
 :
 12px
 ;
-color
+user
+-
+select
 :
-var
-(
--
--
-theme
--
-comment
--
-alt
-)
-;
-font
--
-weight
-:
-lighter
-;
-padding
--
-top
-:
-5px
-;
-flex
--
-grow
-:
-1
-;
-display
-:
-flex
+none
 ;
 justify
 -
