Bug 1394851 - downloads.download API should default to use Firefox's "Save As" pref r=kmag
This patch changes the behavior of the downloads.download API's saveAs option. Previously, the behavior when neither value is provided (the "default behavior") was not defined by our documentation or Chrome's. Now, the default behavior is changing to rely on the Firefox "Save As" pref (browser.download.useDownloadDir). If Firefox is configured to open the "Save As" dialog for all downloads (browser.download.useDownloadDir == false), that behavior will be the default for the downloads.download API. Otherwise, the default behavior will be not to show the dialog.

This patch also moves some test functionality out of test_chrome_ext_downloads_saveAs.html. Previously, that test would test the saveAs option and also the conflictAction:"uniquify" option. In order to add testing for the new default behavior, it was necessary to move the testing of the conflictAction:"uniquify" option to a new test: test_chrome_ext_downloads_uniquify.html

MozReview-Commit-ID: u6VA4kexlr

UltraBlame original commit: 3bbb5071bd20ddf96205ad8bc1888e8647591a2a

--- a/toolkit/components/extensions/test/mochitest/test_chrome_ext_downloads_uniquify.html
+++ b/toolkit/components/extensions/test/mochitest/test_chrome_ext_downloads_uniquify.html
@@ -18,7 +18,7 @@ downloads
 download
 (
 )
-saveAs
+uniquify
 option
 <
 /
@@ -199,45 +199,8 @@ jsm
 "
 )
 ;
-const
-PROMPTLESS_DOWNLOAD_PREF
-=
-"
-browser
-.
-download
-.
-useDownloadDir
-"
-;
-/
-/
-We
-need
-to
-be
-able
-to
-distinguish
-files
-downloaded
-by
-the
-file
-picker
-from
-/
-/
-files
-downloaded
-without
-it
-.
 let
-pickerDir
-;
-let
-defaultDir
+directory
 ;
 add_task
 (
@@ -247,8 +210,7 @@ setup
 (
 )
 {
-let
-downloadDir
+directory
 =
 FileUtils
 .
@@ -264,15 +226,7 @@ downloads
 ]
 )
 ;
-pickerDir
-=
-downloadDir
-.
-clone
-(
-)
-;
-pickerDir
+directory
 .
 createUnique
 (
@@ -289,76 +243,13 @@ PERMS_DIRECTORY
 info
 (
 Using
-file
-picker
 download
 directory
 {
-pickerDir
-.
-path
-}
-)
-;
-defaultDir
-=
-downloadDir
-.
-clone
-(
-)
-;
-defaultDir
-.
-createUnique
-(
-Ci
-.
-nsIFile
-.
-DIRECTORY_TYPE
-FileUtils
-.
-PERMS_DIRECTORY
-)
-;
-info
-(
-Using
-default
-download
 directory
-{
-defaultDir
 .
 path
 }
-)
-;
-isnot
-(
-pickerDir
-.
-path
-defaultDir
-.
-path
-"
-Should
-be
-able
-to
-distinguish
-between
-files
-saved
-with
-or
-without
-the
-file
-picker
-"
 )
 ;
 await
@@ -390,7 +281,7 @@ download
 .
 dir
 "
-defaultDir
+directory
 .
 path
 ]
@@ -415,14 +306,7 @@ popPrefEnv
 (
 )
 ;
-pickerDir
-.
-remove
-(
-true
-)
-;
-defaultDir
+directory
 .
 remove
 (
@@ -439,20 +323,20 @@ add_task
 (
 async
 function
-test_downloads_saveAs
+test_downloads_uniquify
 (
 )
 {
 const
-pickerFile
+file
 =
-pickerDir
+directory
 .
 clone
 (
 )
 ;
-pickerFile
+file
 .
 append
 (
@@ -464,20 +348,23 @@ txt
 )
 ;
 const
-defaultFile
+unique
 =
-defaultDir
+directory
 .
 clone
 (
 )
 ;
-defaultFile
+unique
 .
 append
 (
 "
 file_download
+(
+1
+)
 .
 txt
 "
@@ -499,45 +386,24 @@ window
 ;
 MockFilePicker
 .
+returnValue
+=
+MockFilePicker
+.
+returnOK
+;
+MockFilePicker
+.
 showCallback
 =
 fp
 =
 >
 {
-/
-/
-On
-picker
-'
-show
-'
-event
-choose
-the
-filename
-that
-was
-set
-as
-the
-default
-/
-/
-and
-append
-it
-to
-the
-picker
-'
-s
-download
-directory
 let
 file
 =
-pickerDir
+directory
 .
 clone
 (
@@ -606,43 +472,6 @@ saveAs
 try
 {
 let
-options
-=
-{
-url
-filename
-}
-;
-/
-/
-Only
-define
-the
-saveAs
-option
-if
-the
-argument
-was
-actually
-set
-if
-(
-saveAs
-!
-=
-=
-undefined
-)
-{
-options
-.
-saveAs
-=
-saveAs
-;
-}
-let
 id
 =
 await
@@ -652,7 +481,16 @@ downloads
 .
 download
 (
-options
+{
+url
+filename
+saveAs
+conflictAction
+:
+"
+uniquify
+"
+}
 )
 ;
 browser
@@ -799,76 +637,19 @@ ready
 ;
 async
 function
-testExpectFilePicker
+testUniquify
 (
 saveAs
 )
 {
-ok
+info
 (
-!
-pickerFile
-.
-exists
-(
-)
+Testing
+conflictAction
+:
 "
-the
-file
-should
-have
-been
-cleaned
-up
-properly
-previously
+uniquify
 "
-)
-;
-MockFilePicker
-.
-returnValue
-=
-MockFilePicker
-.
-returnOK
-;
-extension
-.
-sendMessage
-(
-"
-file_download
-.
-txt
-"
-saveAs
-)
-;
-let
-result
-=
-await
-extension
-.
-awaitMessage
-(
-"
-done
-"
-)
-;
-ok
-(
-result
-.
-ok
-downloads
-.
-download
-(
-)
-works
 with
 saveAs
 =
@@ -879,167 +660,68 @@ saveAs
 ;
 ok
 (
-pickerFile
-.
-exists
-(
-)
-"
-the
+!
 file
+.
 exists
-.
-"
-)
-;
-is
 (
-pickerFile
-.
-fileSize
-12
+)
 "
 downloaded
 file
-is
-the
-correct
-size
+should
+have
+been
+cleaned
+up
+before
+test
+ran
 "
 )
 ;
-pickerFile
-.
-remove
+ok
 (
-false
+!
+unique
+.
+exists
+(
+)
+"
+uniquified
+file
+should
+have
+been
+cleaned
+up
+before
+test
+ran
+"
 )
 ;
 /
 /
 Test
-the
-user
-canceling
-the
-save
-dialog
-.
-MockFilePicker
-.
-returnValue
-=
-MockFilePicker
-.
-returnCancel
-;
-extension
-.
-sendMessage
-(
-"
-file_download
-.
-txt
-"
-saveAs
-)
-;
-result
-=
-await
-extension
-.
-awaitMessage
-(
-"
-done
-"
-)
-;
-ok
-(
-!
-result
-.
-ok
-"
 download
-rejected
-if
-the
-user
-cancels
-the
-dialog
-"
-)
-;
-is
-(
-result
-.
-message
-"
-Download
-canceled
-by
-the
-user
-"
-"
+without
+uniquify
+and
+create
+a
+conflicting
+file
+so
+we
+can
+/
+/
+test
 with
-the
-correct
-message
-"
-)
-;
-ok
-(
-!
-pickerFile
+uniquify
 .
-exists
-(
-)
-"
-file
-was
-not
-downloaded
-"
-)
-;
-}
-async
-function
-testNoFilePicker
-(
-saveAs
-)
-{
-ok
-(
-!
-defaultFile
-.
-exists
-(
-)
-"
-the
-file
-should
-have
-been
-cleaned
-up
-properly
-previously
-"
-)
-;
 extension
 .
 sendMessage
@@ -1070,6 +752,7 @@ ok
 result
 .
 ok
+"
 downloads
 .
 download
@@ -1078,15 +761,12 @@ download
 works
 with
 saveAs
-=
-{
-saveAs
-}
+"
 )
 ;
 ok
 (
-defaultFile
+file
 .
 exists
 (
@@ -1101,7 +781,7 @@ exists
 ;
 is
 (
-defaultFile
+file
 .
 fileSize
 12
@@ -1115,7 +795,100 @@ size
 "
 )
 ;
-defaultFile
+/
+/
+Now
+that
+a
+conflicting
+file
+exists
+test
+the
+uniquify
+behavior
+extension
+.
+sendMessage
+(
+"
+file_download
+.
+txt
+"
+saveAs
+)
+;
+result
+=
+await
+extension
+.
+awaitMessage
+(
+"
+done
+"
+)
+;
+ok
+(
+result
+.
+ok
+"
+downloads
+.
+download
+(
+)
+works
+with
+saveAs
+and
+uniquify
+"
+)
+;
+ok
+(
+unique
+.
+exists
+(
+)
+"
+the
+file
+exists
+.
+"
+)
+;
+is
+(
+unique
+.
+fileSize
+12
+"
+downloaded
+file
+is
+the
+correct
+size
+"
+)
+;
+file
+.
+remove
+(
+false
+)
+;
+unique
 .
 remove
 (
@@ -1123,201 +896,16 @@ false
 )
 ;
 }
-info
+await
+testUniquify
 (
-"
-Testing
-that
-saveAs
-=
 true
-uses
-the
-file
-picker
-as
-expected
-"
 )
-;
-let
-saveAs
-=
-true
 ;
 await
-testExpectFilePicker
+testUniquify
 (
-saveAs
-)
-;
-info
-(
-"
-Testing
-that
-saveAs
-=
 false
-does
-not
-use
-the
-file
-picker
-"
-)
-;
-saveAs
-=
-false
-;
-await
-testNoFilePicker
-(
-saveAs
-)
-;
-/
-/
-When
-saveAs
-is
-not
-set
-the
-behavior
-should
-be
-determined
-by
-the
-Firefox
-/
-/
-pref
-that
-normally
-determines
-whether
-the
-"
-Save
-As
-"
-prompt
-should
-be
-/
-/
-displayed
-.
-info
-(
-Testing
-that
-the
-file
-picker
-is
-used
-when
-saveAs
-is
-not
-specified
-+
-but
-{
-PROMPTLESS_DOWNLOAD_PREF
-}
-is
-disabled
-)
-;
-saveAs
-=
-undefined
-;
-await
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-"
-set
-"
-:
-[
-[
-PROMPTLESS_DOWNLOAD_PREF
-false
-]
-]
-}
-)
-;
-await
-testExpectFilePicker
-(
-saveAs
-)
-;
-info
-(
-Testing
-that
-the
-file
-picker
-is
-NOT
-used
-when
-saveAs
-is
-not
-+
-specified
-but
-{
-PROMPTLESS_DOWNLOAD_PREF
-}
-is
-enabled
-)
-;
-await
-SpecialPowers
-.
-popPrefEnv
-(
-)
-;
-await
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-"
-set
-"
-:
-[
-[
-PROMPTLESS_DOWNLOAD_PREF
-true
-]
-]
-}
-)
-;
-await
-testNoFilePicker
-(
-saveAs
 )
 ;
 await
