Bug 1407657 - Add responsive bookmarking, story caching and bug fixes to Activity Stream. r=k88hudson
MozReview-Commit-ID: L49lJDoGHIf

UltraBlame original commit: 3ee7b29fb9a00c751cd224d1673ceb61e31a7129

--- a/browser/extensions/activity-stream/data/content/activity-stream.css
+++ b/browser/extensions/activity-stream/data/content/activity-stream.css
@@ -885,7 +885,8 @@ transform
 :
 rotate
 (
-270deg
+-
+90deg
 )
 ;
 width
@@ -1541,6 +1542,14 @@ body
 -
 wrapper
 .
+section
+-
+title
+.
+body
+-
+wrapper
+.
 sections
 -
 list
@@ -1552,14 +1561,6 @@ last
 of
 -
 type
-.
-body
--
-wrapper
-.
-section
--
-title
 {
 opacity
 :
@@ -1573,6 +1574,16 @@ wrapper
 .
 on
 .
+section
+-
+title
+.
+body
+-
+wrapper
+.
+on
+.
 sections
 -
 list
@@ -1584,16 +1595,6 @@ last
 of
 -
 type
-.
-body
--
-wrapper
-.
-on
-.
-section
--
-title
 {
 opacity
 :
@@ -5418,6 +5419,26 @@ scaleX
 ;
 }
 .
+topic
+:
+:
+after
+{
+content
+:
+"
+"
+;
+display
+:
+table
+;
+clear
+:
+both
+;
+}
+.
 search
 -
 wrapper
@@ -6791,7 +6812,8 @@ position
 -
 x
 :
-217px
+right
+35px
 ;
 }
 .
@@ -9209,31 +9231,11 @@ cursor
 :
 pointer
 ;
-}
-.
-collapsible
+vertical
 -
-section
-.
-section
--
-title
-.
-icon
-.
-icon
--
-arrowhead
--
-down
-{
-margin
+align
 :
--
-3px
-0
-0
-8px
+top
 ;
 }
 .
@@ -9246,6 +9248,18 @@ section
 title
 .
 icon
+-
+arrowhead
+-
+down
+.
+collapsible
+-
+section
+.
+section
+-
+title
 .
 icon
 -
@@ -9254,12 +9268,39 @@ arrowhead
 forward
 {
 margin
+-
+top
 :
 -
-2px
-0
-0
+1px
+;
+margin
+-
+inline
+-
+start
+:
 8px
+;
+transition
+:
+transform
+0
+.
+5s
+cubic
+-
+bezier
+(
+0
+.
+07
+0
+.
+95
+0
+1
+)
 ;
 }
 .
@@ -9748,13 +9789,8 @@ background
 -
 position
 :
-calc
-(
-100
-%
--
+right
 7px
-)
 bottom
 ;
 background
@@ -10395,12 +10431,14 @@ height
 900px
 ;
 margin
--
-inline
--
-end
 :
+0
 -
+7px
+;
+padding
+:
+0
 7px
 ;
 }
