Bug 1393672 - Show PWA onboarding and confrim prompt r=jwu
MozReview-Commit-ID: Kzih56Om7NO

UltraBlame original commit: 385f9bbb4fd815828556ec0b99676c69f00c163e

--- a/mobile/android/app/src/photon/res/values-large/dimens.xml
+++ b/mobile/android/app/src/photon/res/values-large/dimens.xml
@@ -452,6 +452,19 @@ browser_toolbar_icon_width
 dimen
 >
 <
+dimen
+name
+=
+"
+tablet_tab_strip_height_pwa
+"
+>
+48dp
+<
+/
+dimen
+>
+<
 /
 resources
 >
