--- a/mobile/android/app/src/photon/res/values-large/styles.xml
+++ b/mobile/android/app/src/photon/res/values-large/styles.xml
@@ -2303,6 +2303,33 @@ item
 style
 >
 <
+style
+name
+=
+"
+PwaConfirm
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_width
+"
+>
+640dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
 /
 resources
 >
