--- a/mobile/android/app/src/photon/res/values/colors.xml
+++ b/mobile/android/app/src/photon/res/values/colors.xml
@@ -2923,6 +2923,45 @@ FCFCFC
 color
 >
 <
+!
+-
+-
+PWA
+-
+-
+>
+<
+color
+name
+=
+"
+pwa_cancel_btn_press
+"
+>
+#
+ededf0
+<
+/
+color
+>
+<
+color
+name
+=
+"
+pwa_cancel_btn
+"
+>
+android
+:
+color
+/
+transparent
+<
+/
+color
+>
+<
 /
 resources
 >
