--- a/layout/style/test/test_hover_quirk.html
+++ b/layout/style/test/test_hover_quirk.html
@@ -253,6 +253,65 @@ child
 important
 ;
 }
+#
+dynamic
+-
+test
+{
+width
+:
+100px
+;
+height
+:
+100px
+;
+background
+:
+green
+;
+}
+#
+dynamic
+-
+test
+>
+*
+{
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+background
+:
+red
+;
+}
+#
+dynamic
+-
+test
+:
+hover
+>
+*
+{
+background
+:
+rgb
+(
+0
+255
+0
+)
+;
+}
 <
 /
 style
@@ -607,6 +666,83 @@ div
 false
 )
 ;
+/
+/
+Dynamic
+change
+test
+.
+/
+/
+Trigger
+the
+:
+hover
+pseudo
+-
+class
+.
+synthesizeMouseAtCenter
+(
+document
+.
+getElementById
+(
+'
+dynamic
+-
+test
+'
+)
+{
+type
+:
+"
+mousemove
+"
+}
+)
+;
+is
+(
+getComputedStyle
+(
+document
+.
+getElementById
+(
+'
+should
+-
+be
+-
+green
+-
+on
+-
+hover
+'
+)
+)
+.
+backgroundColor
+"
+rgb
+(
+0
+255
+0
+)
+"
+"
+Dynamic
+change
+should
+invalidate
+properly
+"
+)
+;
 SimpleTest
 .
 finish
@@ -674,6 +810,40 @@ display
 <
 /
 p
+>
+<
+div
+id
+=
+"
+dynamic
+-
+test
+"
+>
+<
+div
+id
+=
+"
+should
+-
+be
+-
+green
+-
+on
+-
+hover
+"
+>
+<
+/
+div
+>
+<
+/
+div
 >
 <
 div
