Bug 1005755 - Introduce pause/resume button; r=rickychien
MozReview-Commit-ID: 3dRhufJweD3

UltraBlame original commit: 6f56f7ba748d86fda5e4d812358ab4dda3d6bf72

--- a/devtools/client/netmonitor/src/assets/styles/netmonitor.css
+++ b/devtools/client/netmonitor/src/assets/styles/netmonitor.css
@@ -718,6 +718,64 @@ svg
 )
 ;
 }
+:
+root
+{
+-
+-
+play
+-
+icon
+-
+url
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+play
+.
+svg
+"
+)
+;
+-
+-
+pause
+-
+icon
+-
+url
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+pause
+.
+svg
+"
+)
+;
+}
 *
 {
 box
@@ -864,6 +922,66 @@ flex
 wrap
 :
 wrap
+;
+}
+.
+devtools
+-
+button
+.
+devtools
+-
+pause
+-
+icon
+:
+:
+before
+{
+background
+-
+image
+:
+var
+(
+-
+-
+pause
+-
+icon
+-
+url
+)
+;
+}
+.
+devtools
+-
+button
+.
+devtools
+-
+play
+-
+icon
+:
+:
+before
+{
+background
+-
+image
+:
+var
+(
+-
+-
+play
+-
+icon
+-
+url
+)
 ;
 }
 .
