--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -3682,16 +3682,15 @@ pinned
 :
 after
 {
-height
-:
-100
-%
-;
 position
 :
 absolute
 ;
 top
+:
+0
+;
+bottom
 :
 0
 ;
@@ -4120,43 +4119,17 @@ left
 1px
 solid
 ;
-border
+margin
 -
-image
+top
 :
-linear
--
-gradient
-(
-transparent
-6px
-currentColor
-6px
-currentColor
-calc
-(
-100
-%
--
 5px
-)
-transparent
-calc
-(
-100
-%
--
-5px
-)
-)
 ;
-border
+margin
 -
-image
--
-slice
+bottom
 :
-1
+4px
 ;
 opacity
 :
@@ -4265,19 +4238,10 @@ beforehovered
 :
 after
 {
-border
+margin
 -
-image
+top
 :
-linear
--
-gradient
-(
-transparent
-calc
-(
-1px
-+
 var
 (
 -
@@ -4289,51 +4253,13 @@ top
 border
 -
 width
-)
-)
-currentColor
-calc
-(
-1px
-+
-var
-(
--
--
-tabs
--
-top
--
-border
--
-width
-)
-)
-currentColor
-calc
-(
-100
-%
--
-1px
-)
-transparent
-calc
-(
-100
-%
--
-1px
-)
 )
 ;
-border
+margin
 -
-image
--
-slice
+bottom
 :
-1
+0
 ;
 }
 #
@@ -4402,40 +4328,16 @@ tabs
 border
 )
 ;
-border
+margin
 -
-image
+top
 :
-linear
+0
+;
+margin
 -
-gradient
-(
-transparent
-1px
-var
-(
--
--
-tabs
--
-border
-)
-1px
-var
-(
--
--
-tabs
--
-border
-)
-calc
-(
-100
-%
--
-1px
--
+bottom
+:
 var
 (
 -
@@ -4448,32 +4350,6 @@ navbar
 -
 overlap
 )
-)
-transparent
-calc
-(
-100
-%
--
-1px
--
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
-)
-1
-!
-important
 ;
 opacity
 :
