Bug 1373767 part 0: Adjust reftest "font-inflation-1.html" to allow block-level <math> to form its own font inflation container & have different sizing. r=jfkthame
MozReview-Commit-ID: 6jmVqXoyTRr

UltraBlame original commit: 040dec0a787cd8c8e9c333b67d835101b88a8ef5

--- a/layout/reftests/mathml/font-inflation-1.html
+++ b/layout/reftests/mathml/font-inflation-1.html
@@ -260,18 +260,6 @@ inline
 )
 ;
 var
-display
-=
-document
-.
-getElementById
-(
-"
-display
-"
-)
-;
-var
 cell
 =
 document
@@ -306,22 +294,6 @@ i
 verifySize
 (
 inline
-.
-children
-[
-i
-]
-ref
-.
-children
-[
-i
-]
-)
-;
-verifySize
-(
-display
 .
 children
 [
@@ -502,64 +474,6 @@ mrow
 math
 >
 '
-display
-math
-<
-math
-display
-=
-"
-block
-"
->
-<
-mrow
-id
-=
-"
-display
-"
->
-<
-mtext
-style
-=
-"
-font
--
-family
-:
-dtls
--
-1
-"
-mathvariant
-=
-"
-fraktur
-"
->
-a
-<
-/
-mtext
->
-<
-mo
->
-+
-<
-/
-mo
->
-<
-/
-mrow
->
-<
-/
-math
->
 or
 math
 in
@@ -640,6 +554,88 @@ mtable
 math
 >
 '
+(
+but
+not
+necessarily
+the
+same
+size
+as
+block
+-
+level
+math
+<
+math
+display
+=
+"
+block
+"
+>
+<
+mrow
+id
+=
+"
+display
+"
+>
+<
+mtext
+style
+=
+"
+font
+-
+family
+:
+dtls
+-
+1
+"
+mathvariant
+=
+"
+fraktur
+"
+>
+a
+<
+/
+mtext
+>
+<
+mo
+>
++
+<
+/
+mo
+>
+<
+/
+mrow
+>
+<
+/
+math
+>
+because
+it
+forms
+a
+BFC
+and
+hence
+is
+its
+own
+inflation
+container
+.
+)
 Lorem
 ipsum
 dolor
