--- a/layout/reftests/mathml/font-inflation-1-ref.html
+++ b/layout/reftests/mathml/font-inflation-1-ref.html
@@ -203,64 +203,6 @@ mrow
 math
 >
 '
-display
-math
-<
-math
-display
-=
-"
-block
-"
->
-<
-mrow
-id
-=
-"
-display
-"
->
-<
-mtext
-style
-=
-"
-font
--
-family
-:
-dtls
--
-1
-"
-mathvariant
-=
-"
-fraktur
-"
->
-a
-<
-/
-mtext
->
-<
-mo
->
-+
-<
-/
-mo
->
-<
-/
-mrow
->
-<
-/
-math
->
 or
 math
 in
@@ -341,6 +283,88 @@ mtable
 math
 >
 '
+(
+but
+not
+necessarily
+the
+same
+size
+as
+block
+-
+level
+math
+<
+math
+display
+=
+"
+block
+"
+>
+<
+mrow
+id
+=
+"
+display
+"
+>
+<
+mtext
+style
+=
+"
+font
+-
+family
+:
+dtls
+-
+1
+"
+mathvariant
+=
+"
+fraktur
+"
+>
+a
+<
+/
+mtext
+>
+<
+mo
+>
++
+<
+/
+mo
+>
+<
+/
+mrow
+>
+<
+/
+math
+>
+because
+it
+forms
+a
+BFC
+and
+hence
+is
+its
+own
+inflation
+container
+.
+)
 Lorem
 ipsum
 dolor
