Bug 1033395 - Panels Should Be Anchored from the Same Height on the Toolbar. r=johannh
MozReview-Commit-ID: 6bhlfeD1esE

UltraBlame original commit: 5b9d2ebcf44e87655ac5870e0fe6c59048491008

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -3,6 +3,58 @@ if
 0
 %
 endif
+:
+root
+{
+-
+-
+urlbar
+-
+icon
+-
+padding
+:
+6px
+;
+}
+:
+root
+[
+uidensity
+=
+compact
+]
+{
+-
+-
+urlbar
+-
+icon
+-
+padding
+:
+4px
+;
+}
+:
+root
+[
+uidensity
+=
+touch
+]
+{
+-
+-
+urlbar
+-
+icon
+-
+padding
+:
+7px
+;
+}
 #
 urlbar
 .
@@ -1068,7 +1120,16 @@ height
 ;
 padding
 :
-6px
+var
+(
+-
+-
+urlbar
+-
+icon
+-
+padding
+)
 ;
 -
 moz
@@ -1119,10 +1180,6 @@ height
 :
 24px
 ;
-padding
-:
-4px
-;
 }
 :
 root
@@ -1143,10 +1200,6 @@ width
 height
 :
 30px
-;
-padding
-:
-7px
 ;
 }
 .
