Bug 1408851 - part3: add test. r=TYLin
MozReview-Commit-ID: 3MrSPQWpcY

UltraBlame original commit: 637c31729e35e3d23ebb54fd30512ef6f47ba29f

--- a/layout/style/test/test_computed_style.html
+++ b/layout/style/test/test_computed_style.html
@@ -6454,6 +6454,39 @@ calc
 coordinates
 "
 ]
+/
+/
+inset
+:
+[
+"
+inset
+(
+calc
+(
+10px
+-
+20px
+)
+)
+"
+"
+inset
+(
+-
+10px
+)
+"
+"
+inset
+with
+negative
+calc
+(
+)
+coordinates
+"
+]
 ]
 ;
 var
