--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -769,6 +769,28 @@ top
 3px
 ;
 }
+toolbar
+.
+toolbarbutton
+-
+1
+>
+menupopup
+.
+cui
+-
+widget
+-
+panel
+{
+margin
+-
+top
+:
+-
+8px
+;
+}
 .
 findbar
 -
