Bug 1408322 - Remove inDOMUtils.cssPropertyIsValid() and use CSS.supports() instead. r=jryans
MozReview-Commit-ID: HNYVb31PZus

UltraBlame original commit: 8db059812121c6f7f6ce50075378b55b53254256

--- a/layout/style/test/test_bug1112014.html
+++ b/layout/style/test/test_bug1112014.html
@@ -161,9 +161,14 @@ TYPE_URL
 "
 url
 (
-mozilla
+http
+:
+/
+/
+example
 .
 org
+/
 )
 "
 TYPE_ANGLE
@@ -558,6 +563,41 @@ something
 %
 "
 }
+"
+cursor
+"
+:
+{
+TYPE_URL
+:
+testValues
+.
+TYPE_URL
++
+"
+pointer
+"
+}
+"
+-
+moz
+-
+force
+-
+broken
+-
+image
+-
+icon
+"
+:
+{
+TYPE_NUMBER
+:
+"
+1
+"
+}
 }
 ;
 /
@@ -735,9 +775,9 @@ iter
 let
 parsed
 =
-utils
+CSS
 .
-cssPropertyIsValid
+supports
 (
 propertyName
 testValue
