Bug 1408562 - Update Debugger frontend (10-13). r=jdescottes
MozReview-Commit-ID: K8MnQctGfsO

UltraBlame original commit: a52945a497c89cca6b8edb746837218dbd64e61d

--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -2370,6 +2370,12 @@ display
 :
 flex
 ;
+flex
+-
+direction
+:
+column
+;
 align
 -
 items
@@ -2411,17 +2417,20 @@ index
 .
 modal
 {
-top
+width
 :
-0
+80
+%
 ;
-margin
+height
 :
 auto
 ;
-width
+overflow
+-
+y
 :
-500px
+scroll
 ;
 background
 -
@@ -2436,14 +2445,6 @@ theme
 toolbar
 -
 background
-)
-;
-transform
-:
-translateY
-(
--
-250px
 )
 ;
 transition
@@ -2468,10 +2469,10 @@ box
 -
 shadow
 :
-0
-0
-10px
-2px
+1px
+1px
+3px
+1px
 var
 (
 -
@@ -2515,17 +2516,25 @@ transform
 :
 translateY
 (
-0px
+5px
 )
 ;
 }
 media
 (
-max
+min
 -
 width
 :
-520px
+580px
+)
+and
+(
+min
+-
+height
+:
+340px
 )
 {
 .
@@ -2533,13 +2542,49 @@ modal
 {
 width
 :
-80
+50
 %
 ;
-left
+}
+}
+media
+(
+min
+-
+height
 :
-10
-%
+340px
+)
+{
+.
+modal
+{
+height
+:
+auto
+;
+max
+-
+height
+:
+80vh
+;
+}
+.
+modal
+.
+entered
+.
+modal
+.
+exiting
+{
+transform
+:
+translateY
+(
+30px
+)
 ;
 }
 }
@@ -2753,17 +2798,6 @@ calc
 -
 1px
 )
-;
-}
-.
-shortcuts
--
-modal
-{
-width
-:
-45
-%
 ;
 }
 .
@@ -11500,6 +11534,8 @@ preview
 popup
 .
 header
+-
+container
 {
 width
 :
@@ -11512,15 +11548,6 @@ height
 :
 20px
 ;
-border
--
-bottom
-:
-1px
-solid
-#
-cccccc
-;
 display
 :
 flex
@@ -11530,6 +11557,47 @@ flex
 direction
 :
 column
+;
+margin
+-
+bottom
+:
+5px
+;
+}
+.
+popover
+.
+preview
+-
+popup
+.
+header
+-
+container
+h3
+{
+margin
+:
+0
+;
+margin
+-
+bottom
+:
+5px
+;
+font
+-
+weight
+:
+normal
+;
+font
+-
+size
+:
+14px
 ;
 }
 .
