--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -2370,12 +2370,6 @@ display
 :
 flex
 ;
-flex
--
-direction
-:
-column
-;
 align
 -
 items
@@ -2417,20 +2411,17 @@ index
 .
 modal
 {
-width
+top
 :
-80
-%
+0
 ;
-height
+margin
 :
 auto
 ;
-overflow
--
-y
+width
 :
-scroll
+500px
 ;
 background
 -
@@ -2445,6 +2436,14 @@ theme
 toolbar
 -
 background
+)
+;
+transform
+:
+translateY
+(
+-
+250px
 )
 ;
 transition
@@ -2469,10 +2468,10 @@ box
 -
 shadow
 :
-1px
-1px
-3px
-1px
+0
+0
+10px
+2px
 var
 (
 -
@@ -2516,75 +2515,31 @@ transform
 :
 translateY
 (
-5px
+0px
 )
 ;
 }
 media
 (
-min
--
-width
-:
-580px
-)
-and
-(
-min
--
-height
-:
-340px
-)
-{
-.
-modal
-{
-width
-:
-50
-%
-;
-}
-}
-media
-(
-min
--
-height
-:
-340px
-)
-{
-.
-modal
-{
-height
-:
-auto
-;
 max
 -
-height
+width
 :
-80vh
-;
-}
-.
-modal
-.
-entered
-.
-modal
-.
-exiting
-{
-transform
-:
-translateY
-(
-30px
+520px
 )
+{
+.
+modal
+{
+width
+:
+80
+%
+;
+left
+:
+10
+%
 ;
 }
 }
@@ -2798,6 +2753,17 @@ calc
 -
 1px
 )
+;
+}
+.
+shortcuts
+-
+modal
+{
+width
+:
+45
+%
 ;
 }
 .
@@ -11534,8 +11500,6 @@ preview
 popup
 .
 header
--
-container
 {
 width
 :
@@ -11548,6 +11512,15 @@ height
 :
 20px
 ;
+border
+-
+bottom
+:
+1px
+solid
+#
+cccccc
+;
 display
 :
 flex
@@ -11557,47 +11530,6 @@ flex
 direction
 :
 column
-;
-margin
--
-bottom
-:
-5px
-;
-}
-.
-popover
-.
-preview
--
-popup
-.
-header
--
-container
-h3
-{
-margin
-:
-0
-;
-margin
--
-bottom
-:
-5px
-;
-font
--
-weight
-:
-normal
-;
-font
--
-size
-:
-14px
 ;
 }
 .
