Bug 1398696 - Override the window background to Windows Aero Basic colors for Light/Dark theme on Windows 7. r=dao
This color is originally set to the accent-color of lwthemes, which is expected,
but we want to have the original Aero Basic look in the background on Windows 7
for light/dark and themes to mirror the default theme.

MozReview-Commit-ID: 7KfBF9Ey27A

UltraBlame original commit: de4a2586cbfddbd66739b8ccdf52f1feb99c6a3f

--- a/browser/themes/windows/compacttheme.css
+++ b/browser/themes/windows/compacttheme.css
@@ -123,6 +123,64 @@ visibility
 visible
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+#
+main
+-
+window
+{
+background
+-
+color
+:
+rgb
+(
+185
+209
+234
+)
+!
+important
+;
+}
+#
+main
+-
+window
+:
+-
+moz
+-
+window
+-
+inactive
+{
+background
+-
+color
+:
+rgb
+(
+215
+228
+242
+)
+!
+important
+;
+}
+}
 }
 #
 toolbar
