Bug 1408362 - Remove the tabbrowser-tabs class. r=dao
MozReview-Commit-ID: KsjQkoyLEiE

UltraBlame original commit: 613d38c5f98c43a368d0cd2662f634308ad56ef3

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -779,7 +779,7 @@ tabbrowser
 )
 ;
 }
-.
+#
 tabbrowser
 -
 tabs
@@ -1256,7 +1256,7 @@ display
 none
 ;
 }
-.
+#
 tabbrowser
 -
 tabs
@@ -1283,7 +1283,7 @@ display
 block
 ;
 }
-.
+#
 tabbrowser
 -
 tabs
@@ -1325,7 +1325,7 @@ tabdrop
 -
 samewindow
 ]
-.
+#
 tabbrowser
 -
 tabs
@@ -1383,7 +1383,7 @@ TabsToolbar
 movingtab
 ]
 >
-.
+#
 tabbrowser
 -
 tabs
