Bug 464450 - Get rid of the "padded" class and clean up related styling. r=mak
MozReview-Commit-ID: GVR1I4WTgum

UltraBlame original commit: 824ed2525081aa1738968d62bde96a5eb76eea9e

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -86,6 +86,10 @@ height
 :
 30px
 ;
+cursor
+:
+default
+;
 overflow
 :
 -
@@ -389,36 +393,6 @@ box
 align
 :
 center
-;
-}
-.
-urlbar
--
-input
--
-box
-.
-searchbar
--
-textbox
->
-.
-autocomplete
--
-textbox
--
-container
->
-.
-textbox
--
-input
--
-box
-{
-margin
-:
-0
 ;
 }
 #
