Backed out changeset 824ed2525081 (bug 464450) for failing reftest editor/reftests/xul/autocomplete-1.xul on Linux builds with stylo disabled and frequently asserting in crashtests, e.g. in docshell/base/crashtests/914521.html. r=backout
UltraBlame original commit: 7f841ee580b9745b6d75649619411295e863ed6e

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -1159,6 +1159,23 @@ color
 Highlight
 ;
 }
+.
+urlbar
+-
+textbox
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+stretch
+;
+}
 keyframes
 urlbar
 -
