--- a/toolkit/themes/osx/global/autocomplete.css
+++ b/toolkit/themes/osx/global/autocomplete.css
@@ -48,6 +48,23 @@ xhtml
 )
 ;
 textbox
+:
+not
+(
+.
+padded
+)
+{
+cursor
+:
+default
+;
+padding
+:
+0
+;
+}
+textbox
 [
 nomatch
 =
@@ -66,6 +83,43 @@ true
 color
 :
 red
+;
+}
+textbox
+:
+not
+(
+.
+padded
+)
+.
+textbox
+-
+input
+-
+box
+{
+margin
+:
+0
+3px
+;
+}
+.
+textbox
+-
+input
+-
+box
+{
+-
+moz
+-
+box
+-
+align
+:
+center
 ;
 }
 panel
