--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -86,10 +86,6 @@ height
 :
 30px
 ;
-cursor
-:
-default
-;
 overflow
 :
 -
@@ -393,6 +389,36 @@ box
 align
 :
 center
+;
+}
+.
+urlbar
+-
+input
+-
+box
+.
+searchbar
+-
+textbox
+>
+.
+autocomplete
+-
+textbox
+-
+container
+>
+.
+textbox
+-
+input
+-
+box
+{
+margin
+:
+0
 ;
 }
 #
