Bug 1366644 - Part 3b: Ignore new lint warnings. r=maliu
MozReview-Commit-ID: 4bPUQkELdd

UltraBlame original commit: 15f9515982b753b20cf9f4baaff636730a22ec48

--- a/mobile/android/app/src/main/res/values-v21/integers.xml
+++ b/mobile/android/app/src/main/res/values-v21/integers.xml
@@ -80,6 +80,23 @@ MPL
 >
 <
 resources
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
 >
 <
 integer
@@ -87,6 +104,13 @@ name
 =
 "
 search_assist_launch_res
+"
+tools
+:
+ignore
+=
+"
+ReferenceType
 "
 >
 drawable
