Bug 1407185 - Remove extra toolbar drag space on osx. r=johannh
MozReview-Commit-ID: 5zfeYpt0Ceh

UltraBlame original commit: 04a6b79edba9b15511d9d8f4bc16af0a7e88ab63

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -577,6 +577,21 @@ left
 7px
 ;
 }
+media
+not
+all
+and
+(
+-
+moz
+-
+mac
+-
+yosemite
+-
+theme
+)
+{
 .
 titlebar
 -
@@ -597,6 +612,7 @@ right
 :
 4px
 ;
+}
 }
 #
 main
