Backed out changeset fcc3bffcdd80
MozReview-Commit-ID: 50bdZRQs9Mh

UltraBlame original commit: f01337ed23f337c61469c085d06362e7984aa93a

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -7569,19 +7569,13 @@ background
 color
 :
 #
-0060df
+0096dd
 ;
 color
 :
 white
 !
 important
-;
-font
--
-size
-:
-13px
 ;
 border
 -
@@ -7628,15 +7622,6 @@ prefs
 button
 :
 hover
-{
-background
--
-color
-:
-#
-003eaa
-;
-}
 .
 PanelUI
 -
@@ -7655,7 +7640,7 @@ background
 color
 :
 #
-002275
+018acb
 ;
 }
 .
