Bug 1399142 - PART I: update the tour overlay colors;r=Fischer
MozReview-Commit-ID: 9fPva9qUCHi

UltraBlame original commit: 583e197f3feea6a08b65bce3c3bb3fdf2012cb49

--- a/browser/extensions/onboarding/content/onboarding.css
+++ b/browser/extensions/onboarding/content/onboarding.css
@@ -53,12 +53,12 @@ background
 :
 rgb
 (
-54
-57
-89
+245
+245
+247
 0
 .
-8
+9
 )
 ;
 display
@@ -804,7 +804,7 @@ height
 background
 :
 #
-f5f5f7
+fff
 ;
 border
 :
@@ -817,7 +817,7 @@ rgba
 13
 0
 .
-1
+2
 )
 ;
 border
@@ -908,6 +908,48 @@ dialog
 -
 end
 ]
+;
+box
+-
+shadow
+:
+0
+3px
+rgba
+(
+0
+0
+0
+0
+.
+04
+)
+;
+}
+#
+onboarding
+-
+overlay
+.
+onboarding
+-
+opened
+>
+#
+onboarding
+-
+overlay
+-
+dialog
+:
+-
+moz
+-
+focusring
+{
+outline
+:
+none
 ;
 }
 media
