Bug 1409407 - Clean up #toolbar-menubar ~ #TabsToolbar selectors. r=johannh
MozReview-Commit-ID: 5GsMTn0BSMP

UltraBlame original commit: 01b063d352b116ff44dc9d5ce14ed2d9585b3f7c

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -3101,7 +3101,7 @@ autohide
 true
 ]
 )
-~
++
 #
 TabsToolbar
 %
@@ -3150,7 +3150,7 @@ autohide
 true
 ]
 )
-~
++
 #
 TabsToolbar
 >
@@ -4165,7 +4165,7 @@ autohide
 =
 true
 ]
-~
++
 #
 TabsToolbar
 >
