--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -638,11 +638,6 @@ menubar
 "
 ]
 #
-toolbar
--
-menubar
-~
-#
 TabsToolbar
 :
 root
@@ -667,7 +662,7 @@ true
 [
 inactive
 ]
-~
++
 #
 TabsToolbar
 {
@@ -719,11 +714,6 @@ menubar
 "
 ]
 #
-toolbar
--
-menubar
-~
-#
 TabsToolbar
 :
 root
@@ -748,7 +738,7 @@ true
 [
 inactive
 ]
-~
++
 #
 TabsToolbar
 {
@@ -6444,11 +6434,6 @@ menubar
 "
 ]
 #
-toolbar
--
-menubar
-~
-#
 TabsToolbar
 >
 .
@@ -6474,11 +6459,6 @@ chromehidden
 menubar
 "
 ]
-#
-toolbar
--
-menubar
-~
 #
 TabsToolbar
 >
@@ -6509,7 +6489,7 @@ true
 [
 inactive
 ]
-~
++
 #
 TabsToolbar
 >
@@ -6542,7 +6522,7 @@ true
 [
 inactive
 ]
-~
++
 #
 TabsToolbar
 >
@@ -6605,11 +6585,6 @@ menubar
 "
 ]
 #
-toolbar
--
-menubar
-~
-#
 TabsToolbar
 >
 .
@@ -6635,11 +6610,6 @@ chromehidden
 menubar
 "
 ]
-#
-toolbar
--
-menubar
-~
 #
 TabsToolbar
 >
@@ -6670,7 +6640,7 @@ true
 [
 inactive
 ]
-~
++
 #
 TabsToolbar
 >
@@ -6703,7 +6673,7 @@ true
 [
 inactive
 ]
-~
++
 #
 TabsToolbar
 >
