Bug 1405236 - Custom Tabs Switch under Settings -> General. r=walkingice
MozReview-Commit-ID: 5zHHXKGfMSK

UltraBlame original commit: 5ed5bee95f79a14136e3d8bc50cefc7a56d53ac4

--- a/mobile/android/app/src/main/res/xml/preferences_general.xml
+++ b/mobile/android/app/src/main/res/xml/preferences_general.xml
@@ -387,6 +387,46 @@ true
 /
 >
 <
+SwitchPreference
+android
+:
+key
+=
+"
+android
+.
+not_a_preference
+.
+customtabs_58
+"
+android
+:
+title
+=
+"
+string
+/
+pref_custom_tabs
+"
+android
+:
+summary
+=
+"
+string
+/
+pref_custom_tabs_summary
+"
+android
+:
+defaultValue
+=
+"
+true
+"
+/
+>
+<
 /
 PreferenceScreen
 >
